--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
+        <activity android:name=".User" />
+        <activity android:name=".Admin" />
         <activity android:name=".AccountActivity.CreateAccountActivity" />
         <activity android:name=".AccountActivity.ResetPasswordActivity"></activity>
+        <uses-library android:name="com.google.android.maps" />
     </application>
 
 </manifest>
