Updating map in mapview

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,12 @@
         <activity android:name=".Admin" />
         <activity android:name=".AccountActivity.CreateAccountActivity" />
         <activity android:name=".AccountActivity.ResetPasswordActivity"></activity>
+        <service
+            android:name=".BusInformationService"
+            android:exported="true"/>
+
         <uses-library android:name="com.google.android.maps" />
+
     </application>
 
 </manifest>
