--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -34,6 +35,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     implementation 'com.google.android.gms:play-services-maps:11.0.4'
 }
+
+
 
 
 
