Bus ETA working. ETA UI done. Map's camera minor change.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
             android:name=".BusInformationService"
             android:exported="true" />
 
+        <service
+            android:name=".ETAInformationService"
+            android:exported="true" />
+
         <uses-library android:name="com.google.android.maps" />
 
         <activity
